Bug 1571219 - Refactor PerformanceMeasure to avoid double-reducing timestamps r=baku a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D50127